# dci-module-ppn-service-aup

./: CMakeLists.txt
idl/ppn/service/: aup.idl
src/: aup.cpp  aup.hpp  entry.cpp  pch.hpp
src/consumer/: base.cpp  base.hpp  catalog.cpp  catalog.hpp  storage.cpp  storage.hpp
src/consumer/base/: downloader.cpp  downloader.hpp  quota.cpp  quota.hpp  recvBuffer.cpp  recvBuffer.hpp  remote.cpp  remote.hpp
src/supplier/: base.cpp  base.hpp  catalog.cpp  catalog.hpp  storage.cpp  storage.hpp
